# Hudorem

./: .gitignore  README.md  cli.py  docker-compose.yml  main.py  pyproject.toml
hudorem/: core.py
migrations/: 1998_01_01_00_00_00_test_table.py  2024_03_04_01_04_03_create_new_tbale.py  2024_03_04_01_10_26_create_new_tabl.py
